# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  logger.py  modules.py  name_normalize.py  page_loader.py
page_loader/scripts/: page_loader.py
tests/: test_modules.py  test_name_normalize.py  test_page_loader.py
tests/fixtures/: index.html  peace.html  result.html
